--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/11/2020 10:59:00 PM</p>
+    <p class="lastupdate">09/11/2020 11:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">59.4&#176;F</td>
+        <td class="data">59.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">59.4&#176;F</td>
+        <td class="data">59.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">59.4&#176;F</td>
+        <td class="data">59.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.4&#176;F</td>
+        <td class="data">46.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">62%</td>
+        <td class="data">63%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.954 inHg (0.019)</td>
+        <td class="data">29.954 inHg (0.020)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NW (315&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 8 hours, 12 minutes</td>
+      <td class="data">10 days, 8 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 8 hours, 12 minutes</td>
+      <td class="data">10 days, 8 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
