--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/11/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/12/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,27 +50,27 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">57.0&#176;F</td>
+        <td class="data">56.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">57.0&#176;F</td>
+        <td class="data">56.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">57.0&#176;F</td>
+        <td class="data">56.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">45.8&#176;F</td>
+        <td class="data">45.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">66%</td>
+        <td class="data">67%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.949 inHg (-0.003)</td>
+        <td class="data">29.949 inHg (-0.004)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
@@ -110,11 +110,11 @@
       <table class="celestial">
         <tr>
           <td class="label">Sunrise</td>
-          <td class="data">06:41:51 AM</td>
+          <td class="data">06:42:36 AM</td>
         </tr>
         <tr>
           <td class="label">Sunset</td>
-          <td class="data">07:17:34 PM</td>
+          <td class="data">07:16:07 PM</td>
         </tr>
         <tr>
           <td class="label">Moon Phase</td>
@@ -153,10 +153,10 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:01:26 PM">
-            81.7</span><br/>
-          <span title="06:21:27 AM">
-            48.2</span>
+          <span title="12:00:01 AM">
+            57.0</span><br/>
+          <span title="12:04:00 AM">
+            56.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="04:01:26 PM" class="hival">
-            81.7</span>
+          <span title="12:00:01 AM" class="hival">
+            57.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="06:21:27 AM" class="loval">
-            48.2</span>
+          <span title="12:04:00 AM" class="loval">
+            56.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:27 AM (Friday)" class="loval">
@@ -235,10 +235,10 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="06:16:50 PM">
-            54.2</span><br/>
-          <span title="08:45:00 PM">
-            39.6</span>
+          <span title="12:00:01 AM">
+            46.2</span><br/>
+          <span title="12:04:00 AM">
+            45.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
@@ -269,10 +269,10 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="06:04:49 AM">
-            88</span><br/>
-          <span title="07:31:10 PM">
-            32</span>
+          <span title="12:00:01 AM">
+            67</span><br/>
+          <span title="12:00:01 AM">
+            67</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:04:49 AM (Friday)">
@@ -303,10 +303,10 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="09:56:01 AM">
-            30.059</span><br/>
-          <span title="07:32:02 PM">
-            29.924</span>
+          <span title="12:00:01 AM">
+            29.951</span><br/>
+          <span title="12:01:00 AM">
+            29.947</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:56:01 AM (Friday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="01:12:10 PM">
+          <span title="12:01:16 AM">
             4</span><br/>
-          162
+          309
         </td>
         <td class="data new_row hilo_week">
           <span title="03:36:26 PM (Wednesday)">
@@ -407,7 +407,7 @@
       <tr>
         <td class="label">Wind Average</td>
         <td class="data new_row hilo_day">
-          0</td>
+          1</td>
         <td class="data new_row hilo_week">
           1</td>
         <td class="data new_row hilo_month">
@@ -439,8 +439,8 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          0<br/>
-          167
+          1<br/>
+          303
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -470,10 +470,10 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:06:02 PM">
-            74.3</span><br/>
-          <span title="07:27:01 AM">
-            70.9</span>
+          <span title="12:00:01 AM">
+            72.2</span><br/>
+          <span title="12:01:00 AM">
+            72.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -507,8 +507,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             43</span><br/>
-          <span title="04:00:01 AM">
-            42</span>
+          <span title="12:00:01 AM">
+            43</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:57:01 AM (Wednesday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 9 hours, 12 minutes</td>
+      <td class="data">10 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 9 hours, 12 minutes</td>
+      <td class="data">10 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
