--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/11/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/12/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,10 +84,10 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">81.7<br/>
-            <span class="timestamp">04:01:26 PM</span><br/>
-            48.2<br/>
-            <span class="timestamp">06:21:27 AM</span>
+          <td class="data new_row">57.0<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            56.6<br/>
+            <span class="timestamp">12:04:00 AM</span>
           </td>
           <td class="data new_row">117.5<br/>
             <span class="timestamp">04:04:42 PM (Sunday)</span><br/>
@@ -113,8 +113,8 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">81.7<br/>
-            <span class="timestamp">04:01:26 PM</span>
+          <td class="data new_row">57.0<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">117.5<br/>
             <span class="timestamp">04:04:42 PM (Sunday)</span>
@@ -132,8 +132,8 @@
         <tr>
           <td class="label">Wind Chill</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">48.2<br/>
-            <span class="timestamp">06:21:27 AM</span>
+          <td class="data new_row">56.6<br/>
+            <span class="timestamp">12:04:00 AM</span>
           </td>
           <td class="data new_row">48.2<br/>
             <span class="timestamp">06:21:27 AM (Friday)</span>
@@ -151,10 +151,10 @@
         <tr>
           <td class="label">Dew Point</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">54.2<br/>
-            <span class="timestamp">06:16:50 PM</span><br/>
-            39.6<br/>
-            <span class="timestamp">08:45:00 PM</span>
+          <td class="data new_row">46.2<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            45.8<br/>
+            <span class="timestamp">12:04:00 AM</span>
           </td>
           <td class="data new_row">58.4<br/>
             <span class="timestamp">11:23:38 AM (Monday)</span><br/>
@@ -180,10 +180,10 @@
         <tr>
           <td class="label">Humidity</td>
           <td class="units">%</td>
-          <td class="data new_row">88<br/>
-            <span class="timestamp">06:04:49 AM</span><br/>
-            32<br/>
-            <span class="timestamp">07:31:10 PM</span>
+          <td class="data new_row">67<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            67<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">88<br/>
             <span class="timestamp">06:04:49 AM (Friday)</span><br/>
@@ -209,10 +209,10 @@
         <tr>
           <td class="label">Barometer</td>
           <td class="units"> inHg</td>
-          <td class="data new_row">30.059<br/>
-            <span class="timestamp">09:56:01 AM</span><br/>
-            29.924<br/>
-            <span class="timestamp">07:32:02 PM</span>
+          <td class="data new_row">29.951<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            29.947<br/>
+            <span class="timestamp">12:01:00 AM</span>
           </td>
           <td class="data new_row">30.059<br/>
             <span class="timestamp">09:56:01 AM (Friday)</span><br/>
@@ -276,8 +276,8 @@
           </td>
           <td class="data new_row">
             4<br/>
-            162<br/>
-            <span class="timestamp">01:12:10 PM</span>
+            309<br/>
+            <span class="timestamp">12:01:16 AM</span>
           </td>
           <td class="data new_row">
             17<br/>
@@ -304,7 +304,7 @@
           <td class="label">Wind Average</td>
           <td class="units"> mph</td>
           <td class="data new_row">
-            0</td>
+            1</td>
           <td class="data new_row">
             1</td>
           <td class="data new_row">
@@ -334,8 +334,8 @@
             &#176;
           </td>
           <td class="data new_row">
-            0<br/>
-            167
+            1<br/>
+            303
           </td>
           <td class="data new_row">
             0<br/>
@@ -361,10 +361,10 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            74.3<br/>
-            <span class="timestamp">04:06:02 PM</span><br/>
-            70.9<br/>
-            <span class="timestamp">07:27:01 AM</span>
+            72.2<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            72.1<br/>
+            <span class="timestamp">12:01:00 AM</span>
           </td>
           <td class="data new_row">
             91.8<br/>
@@ -398,8 +398,8 @@
           <td class="data new_row">
             43<br/>
             <span class="timestamp">12:00:01 AM</span><br/>
-            42<br/>
-            <span class="timestamp">04:00:01 AM</span>
+            43<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
             49<br/>
