--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 12:04:00 AM</p>
+    <p class="lastupdate">09/12/2020 12:09:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">56.7&#176;F</td>
+        <td class="data">56.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">56.7&#176;F</td>
+        <td class="data">56.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">56.7&#176;F</td>
+        <td class="data">56.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -66,15 +66,15 @@
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">67%</td>
+        <td class="data">68%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.949 inHg (-0.004)</td>
+        <td class="data">29.946 inHg (-0.008)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph NW (315&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">72.1&#176;F</td>
+        <td class="data">72.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             57.0</span><br/>
-          <span title="12:04:00 AM">
-            56.6</span>
+          <span title="12:08:58 AM">
+            56.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:04:00 AM" class="loval">
-            56.6</span>
+          <span title="12:08:58 AM" class="loval">
+            56.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:27 AM (Friday)" class="loval">
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             46.2</span><br/>
-          <span title="12:04:00 AM">
-            45.8</span>
+          <span title="12:06:14 AM">
+            45.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:01 AM">
-            67</span><br/>
+          <span title="12:07:02 AM">
+            68</span><br/>
           <span title="12:00:01 AM">
             67</span>
         </td>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             29.951</span><br/>
-          <span title="12:01:00 AM">
-            29.947</span>
+          <span title="12:05:00 AM">
+            29.945</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:56:01 AM (Friday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          303
+          311
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             72.2</span><br/>
-          <span title="12:01:00 AM">
-            72.1</span>
+          <span title="12:06:00 AM">
+            72.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 9 hours, 17 minutes</td>
+      <td class="data">10 days, 9 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 9 hours, 17 minutes</td>
+      <td class="data">10 days, 9 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
